# src/main/java/org/example/controller/ProductController.java
@@ -1,10 +1,10 @@
 package org.example.controller;
 
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.example.dto.ProductBuyNewRequestDto;
 import org.example.dto.UpdateProductRequestDto;
 import org.example.service.ClientProductService;
-import org.example.service.ProductService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -13,16 +13,15 @@ import org.springframework.web.bind.annotation.*;
 @RequiredArgsConstructor
 public class ProductController {
     private final ClientProductService clientProductService;
-    private final ProductService productService;
 
     @PostMapping("/buy")
-    public ResponseEntity<String> buyProduct(@RequestBody ProductBuyNewRequestDto request) {
+    public ResponseEntity<String> buyProduct(@Valid @RequestBody ProductBuyNewRequestDto request) {
         clientProductService.assignProductToClient(request.getClientId(), request.getProductId());
         return ResponseEntity.ok("Product purchased successfully");
     }
 
     @PutMapping("/update")
-    public ResponseEntity<String> updateProduct(@RequestBody UpdateProductRequestDto request) {
+    public ResponseEntity<String> updateProduct(@Valid @RequestBody UpdateProductRequestDto request) {
         clientProductService.updateProductStatus(
                 request.getClientId(),
                 request.getProductId(),
