# src/main/java/org/example/dto/ProductBuyNewRequestDto.java
@@ -1,11 +1,16 @@
 package org.example.dto;
 
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
 import lombok.Data;
 import org.example.domain.ContactMethod;
 
 @Data
 public class ProductBuyNewRequestDto {
-    public String clientId;
-    public String productId;
-    public ContactMethod contactMethod;
+    @NotBlank
+    private String clientId;
+    @NotBlank
+    private String productId;
+    @NotNull
+    private ContactMethod contactMethod;
 }
