# src/main/java/org/example/dto/UpdateProductRequestDto.java
@@ -1,11 +1,14 @@
 package org.example.dto;
 
+import jakarta.validation.constraints.NotBlank;
 import lombok.Data;
+import org.example.domain.ProductStatus;
 
 @Data
 public class UpdateProductRequestDto {
-    public String clientId;
-    public String productId;
-    public String newName;
-    public String status;
+    @NotBlank
+    private String clientId;
+    @NotBlank
+    private String productId;
+    private ProductStatus status;
 }
